[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = "Personal assistant"
authors = ["YarValeriy <147444561+YarValeriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
